deployment/kubernetes/road-detection-computer-vision.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: road-detection-computer-vision-deployment
  namespace: road-detection
  labels:
    app: road-detection-computer-vision-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: road-detection-computer-vision
  template:
    metadata:
      labels:
        app: road-detection-computer-vision
    spec:
      containers:
      - name: road-detection-computer-vision
        image: registry.innovox.ai/road-detection-computer-vision:v0.1.4
        imagePullPolicy: IfNotPresent
      imagePullSecrets:
        - name: innovox-registry
---
apiVersion: v1
kind: Service
metadata:
  name: road-detection-computer-vision-service
  namespace: road-detection
  labels:
    app: road-detection-computer-vision-deployment
spec:
  selector:
    app: road-detection-computer-vision
  ports:
    - name: road-detection-computer-vision-service
      port: 8080
      targetPort: 8080
      nodePort: 30358
  type: NodePort
