deployment/kubernetes/road-detection-flower.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flower-deployment
  namespace: road-detection
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flower
  template:
    metadata:
      labels:
        app: flower
    spec:
      containers:
        - name: flower
          image: mher/flower
          ports:
            - containerPort: 5555
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "100m"
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: flower-service
  namespace: road-detection
spec:
  selector:
    app: flower
  ports:
    - protocol: TCP
      port: 5555
      targetPort: 5555
  type: ClusterIP
