deployment/kubernetes/road-detection-gui.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: road-detection-gui-deployment
  namespace: road-detection
spec:
  replicas: 1
  selector:
    matchLabels:
      app: road-detection-gui
  template:
    metadata:
      labels:
        app: road-detection-gui
    spec:
      imagePullSecrets:
        - name: innovox-registry
      containers:
      - name: road-detection-gui
        image: registry.innovox.ai/road-detection-gui:v0.1.3
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: road-detection-gui-service
  namespace: road-detection
  labels:
    app: road-detection-gui-deployment
spec:
  selector:
    app: road-detection-gui
  ports:
    - name: road-detection-gui
      port: 80
      targetPort: 80
      nodePort: 30357
  type: NodePort
