deployment/kubernetes/road-detection-rabbitmq.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
  namespace: road-detection
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.7-management
          ports:
            - containerPort: 5672
            - containerPort: 15672
          resources:
            requests:
              memory: "256Mi"
              cpu: "2"
            limits:
              memory: "512Mi"
              cpu: "2"
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: road-detection
spec:
  selector:
    app: rabbitmq
  ports:
    - protocol: TCP
      name: rabbitmq-port
      port: 5672
      targetPort: 5672
    - protocol: TCP
      name: rabbitmq-admin-port
      port: 15672
      targetPort: 15672
  type: ClusterIP
