deployment/kubernetes/road-detection-triton.yml
apiVersion: v1
kind: Pod
metadata:
  name: triton-server
  namespace: road-detection
spec:
  containers:
  - name: triton-server
    image: nvcr.io/nvidia/tritonserver:23.12-py3
    volumeMounts:
      - mountPath: /models
        name: model-repository
    ports:
      - containerPort: 8000
      - containerPort: 8001
      - containerPort: 8002
    command:
      - tritonserver
      - --model-repository=/models
      - --backend-config=tensorflow,version=2
  volumes:
    - name: model-repository
      hostPath:
        path: /home/csmedina/workspace/Road_detection_CNN/triton/model_repository
---
apiVersion: v1
kind: Service
metadata:
  name: triton-server-service
  namespace: road-detection
spec:
  type: NodePort
  selector:
    app: triton-server
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30354 # Choose a node port number within the valid range
    - name: grpc
      protocol: TCP
      port: 8001
      targetPort: 8001
      nodePort: 30355 # Choose a different node port number within the valid range
    - name: metrics
      protocol: TCP
      port: 8002
      targetPort: 8002
      nodePort: 30356 # Choose another node port number within the valid range
